# nn.api

./: .gitignore  LICENSE  Makefile  README.md  main.py  model.py  pyproject.toml  test.html
app/: __init__.py  main.py  ml.py  schemas.py  storage.py
tests/: test_api.py
